src/test/ui/unboxed-closures/unboxed-closures-mutated-upvar-from-fn-closure.ast.nll.stderr
error[E0594]: cannot assign to `counter`, as it is a captured variable in a `Fn` closure
  --> $DIR/unboxed-closures-mutated-upvar-from-fn-closure.rs:24:9
   |
LL |         counter += 1;
   |         ^^^^^^^^^^^^ cannot assign
   |
help: consider changing this to accept closures that implement `FnMut`
  --> $DIR/unboxed-closures-mutated-upvar-from-fn-closure.rs:23:10
   |
LL |       call(|| {
   |  __________^
LL | |         counter += 1;
LL | |         //[ast]~^ ERROR cannot assign to data in a captured outer variable in an `Fn` closure
LL | |         //[mir]~^^ ERROR cannot assign to `counter`
LL | |     });
   | |_____^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
